; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_freespace.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_freespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@__const.get_freespace.root = private unnamed_addr constant [7 x i8] c"\\\\.\\A:\00", align 1
@GENERIC_READ = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@IOCTL_DISK_GET_DRIVE_GEOMETRY_EX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @get_freespace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_freespace(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca [7 x i8], align 1
  %6 = alloca %struct.TYPE_7__, align 4
  %7 = alloca %struct.TYPE_8__, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %10 = bitcast [7 x i8]* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %10, i8* align 1 getelementptr inbounds ([7 x i8], [7 x i8]* @__const.get_freespace.root, i32 0, i32 0), i64 7, i1 false)
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  store i32 536870912, i32* %11, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @GetDiskFreeSpaceExW(i8* %12, i32* null, i32* null, %struct.TYPE_7__* %6)
  %14 = load i8*, i8** %3, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 0
  %16 = load i8, i8* %15, align 1
  %17 = getelementptr inbounds [7 x i8], [7 x i8]* %5, i64 0, i64 4
  store i8 %16, i8* %17, align 1
  %18 = getelementptr inbounds [7 x i8], [7 x i8]* %5, i64 0, i64 0
  %19 = load i32, i32* @GENERIC_READ, align 4
  %20 = load i32, i32* @FILE_SHARE_READ, align 4
  %21 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %22 = or i32 %20, %21
  %23 = load i32, i32* @OPEN_EXISTING, align 4
  %24 = call i64 @CreateFileW(i8* %18, i32 %19, i32 %22, i32* null, i32 %23, i32 0, i32 0)
  store i64 %24, i64* %8, align 8
  %25 = load i64, i64* %8, align 8
  %26 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %41

28:                                               ; preds = %2
  %29 = load i64, i64* %8, align 8
  %30 = load i32, i32* @IOCTL_DISK_GET_DRIVE_GEOMETRY_EX, align 4
  %31 = call i64 @DeviceIoControl(i64 %29, i32 %30, i32* null, i32 0, %struct.TYPE_8__* %7, i32 4, i32* %9, i32* null)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %28
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32*, i32** %4, align 8
  store i32 %36, i32* %37, align 4
  br label %38

38:                                               ; preds = %33, %28
  %39 = load i64, i64* %8, align 8
  %40 = call i32 @CloseHandle(i64 %39)
  br label %41

41:                                               ; preds = %38, %2
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  ret i32 %43
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @GetDiskFreeSpaceExW(i8*, i32*, i32*, %struct.TYPE_7__*) #2

declare dso_local i64 @CreateFileW(i8*, i32, i32, i32*, i32, i32, i32) #2

declare dso_local i64 @DeviceIoControl(i64, i32, i32*, i32, %struct.TYPE_8__*, i32, i32*, i32*) #2

declare dso_local i32 @CloseHandle(i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
